-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.8
-
-
2
-
ca0c8f9f4a (qt/tqtc-qtconnectivity/5.15)
-
Team One Foundation Sprint 51
Starting from 5.15.8 bluetooth reports an issue with connect when trying to access device characteristics e.g. in the lowenergyscanner example:
QObject::connect: Cannot queue arguments of type 'QHash<QLowEnergyHandle,QLowEnergyServicePrivate::CharData>' (Make sure 'QHash<QLowEnergyHandle,QLowEnergyServicePrivate::CharData>' is registered using qRegisterMetaType().)
and no characteristics are found. The same problem does not occur in 5.15.7.
Steps to reproduce the problem:
- build & start lowenergyscanner
- click search
- click on any device
- click on any service
- is duplicated by
-
QTBUG-102248 QBluetooth low energy discovering details on Windows cannot connect signals
-
- Closed
-
-
QTBUG-100464 Missing meta type registrations
-
- Closed
-
| For Gerrit Dashboard: QTBUG-99767 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 393779,2 | Fix missing MetaType registration | tqtc/lts-5.15 | qt/tqtc-qtconnectivity | Status: MERGED | +2 | 0 |