Fix missing MetaType registration

This patch amends bf69c830419a7cda87d6aa71c962804a946011ea.
After fixing the thread affinity issue, Qt is using QueuedConnection
for the charListObtained signal. As a result, the signal's arguments
need to be registered for the metatype system.
This patch provides such registration.

This is a 5.15-only change, as Qt 6 is does not require to register
the types explicitly.

Fixes: QTBUG-99767
Change-Id: I50e6314669bd6e779b85373f417c92b57f23a7e9
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>